[gd_scene load_steps=2 format=2]

[ext_resource path="res://Closing.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 40.0
margin_top = 23.0
margin_right = 237.0
margin_bottom = 123.0
rect_scale = Vector2( 2, 2 )
text = "You get to choose the next difficulty level. Press 'g' to add penalty of 5 fuel on incorrect responses OR press 'h' to reduce stimulus duration to 2 seconds."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
visible = false
margin_left = 39.0
margin_top = 23.0
margin_right = 234.0
margin_bottom = 152.0
rect_scale = Vector2( 2, 2 )
text = "You get to choose the next difficulty level. Press 'g' to add penalty of 5 fuel on incorrect responses OR press 'h' to reduce stimulus duration to 1.5 seconds and interstimulus interval to 0.5 seconds."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
margin_left = 40.0
margin_top = 24.0
margin_right = 237.0
margin_bottom = 122.0
rect_scale = Vector2( 2, 2 )
text = "You get to choose the next difficulty level. Press 'g' to increase penalty to 10 fuel on incorrect responses OR press 'h' to reduce stimulus duration to 1.5 seconds."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
visible = false
margin_left = 40.0
margin_top = 24.0
margin_right = 235.0
margin_bottom = 131.0
rect_scale = Vector2( 2, 2 )
text = "You get to choose the next difficulty level. Press 'g' to increase penalty to 10 fuel on incorrect responses OR press 'h' to reduce response limit to 50% of the stimulus duration."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
visible = false
margin_left = 39.0
margin_top = 24.0
margin_right = 237.0
margin_bottom = 139.0
rect_scale = Vector2( 2, 2 )
text = "You get to choose the next difficulty level. Press 'g' to increase penalty to 15 fuel on incorrect responses OR press 'h' to reduce stimulus duration to 1 second."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
visible = false
margin_left = 39.0
margin_top = 260.0
margin_right = 237.0
margin_bottom = 290.0
rect_scale = Vector2( 2, 2 )
text = "Press “END LEVEL” to go to the next task."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 119.201
margin_top = 335.663
margin_right = 192.201
margin_bottom = 355.663
rect_scale = Vector2( 2, 2 )
text = "END LEVEL"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
